ID-630 Update Jersey to 3 for Jakarta support