@@ -1,13 +1,16 @@
+def jerseyVersion = '3.1.2'
+
 dependencies {
-    // Version controlled by dependency management plugin
-    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
-    implementation 'org.glassfish.jersey.core:jersey-client'
-    implementation 'org.glassfish.jersey.media:jersey-media-json-jackson'
-    implementation 'org.glassfish.jersey.media:jersey-media-multipart'
-    implementation 'io.swagger.core.v3:swagger-annotations'
-    swaggerCodegen 'io.swagger.codegen.v3:swagger-codegen-cli'
-    implementation "org.glassfish.jersey.inject:jersey-hk2"
-    implementation "org.glassfish.jersey.connectors:jersey-apache-connector"
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.15.2'
+
+    implementation "org.glassfish.jersey.core:jersey-client:$jerseyVersion"
+    implementation "org.glassfish.jersey.media:jersey-media-json-jackson:$jerseyVersion"
+    implementation "org.glassfish.jersey.media:jersey-media-multipart:$jerseyVersion"
+
+    implementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'
+    implementation 'jakarta.ws.rs:jakarta.ws.rs-api:3.1.0'
+    implementation 'io.swagger.core.v3:swagger-annotations:2.2.12'
+    swaggerCodegen 'io.swagger.codegen.v3:swagger-codegen-cli:3.0.45'
 }
 
 def artifactGroup = "${group}.policy"
@@ -15,23 +18,19 @@ def artifactGroup = "${group}.policy"
 generateSwaggerCode {
     inputFile = file('../common/openapi.yml')
     language = 'java'
-    library = 'jersey2'
-
-    // For Swagger Codegen v3 on Java 16+
-    // See https://github.com/swagger-api/swagger-codegen/issues/10966
-    jvmArgs = ['--add-opens=java.base/java.util=ALL-UNNAMED']
+    library = 'jersey3'
 
     components = [
         apiDocs  : false, apiTests: false,
         modelDocs: false, modelTests: false
     ]
 
-    templateDir = file("${projectDir}/src/main/resources/swaggercodegen")
     additionalProperties = [
         modelPackage  : "${artifactGroup}.model",
         apiPackage    : "${artifactGroup}.api",
         invokerPackage: "${artifactGroup}.client",
-        dateLibrary   : 'java8'
+        dateLibrary   : 'java8',
+        jakarta 	  :  true
     ]
 
     rawOptions = ['--ignore-file-override', "${projectDir}/.swagger-codegen-ignore"]
